--- a/test-app/src/index.css
+++ b/test-app/src/index.css
@@ -15,17 +15,15 @@
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
     min-width: 320px;
     min-height: 100vh;
 }
 
 #root {
     width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
